--- a/app/views/index.hbs
+++ b/app/views/index.hbs
@@ -29,6 +29,7 @@
 <div id="weights_container" class="Weights-Container"></div>
 <script>
     var simulation_data = null;
+    var weights_chart = null;
     var parse_time = function(formatted_string){
         return (new Date(formatted_string)).getTime();
     }
@@ -45,7 +46,7 @@
                             data: []
                         };
                     }
-                    agg[weight.symbol].data.push([parse_time(sim.date_string), weight.market_cap_usd]);
+                    agg[weight.symbol].data.push([parse_time(sim.date_string), weight.market_cap_weight]);
                 });
             });
             var bar_keys = Object.keys(agg);
@@ -53,10 +54,11 @@
             bar_keys.forEach(function(key){
                 var val = agg[key];
                 val.data = val.data.sort(function(a, b){
-                    return a[1] - b[1];
+                    return a[0] - b[0];
                 });
                 bar_data.push(val);
             });
+
             return bar_data;
         }else{
             [];
@@ -64,9 +66,9 @@
     }
 
     var setup_weights = function(w_data){
-        Highcharts.stockChart('weights_container', {
+        return Highcharts.stockChart('weights_container', {
             chart: {
-                type: 'area'
+                type: 'column'
             },
             title: {
                 text: 'Portfolio Weights'
@@ -80,13 +82,14 @@
                 }
             },
             plotOptions: {
-                area: {
-                    stacking: 'percent',
-                    lineColor: '#666666',
-                    lineWidth: 1,
-                    marker: {
-                        lineWidth: 1,
-                        lineColor: '#666666'
+                column: {
+                    stacking: 'normal',
+                    dataGrouping: {
+                        approximation: 'average',
+                        units: [[
+                            'week',
+                            [1]
+                        ]]
                     }
                 }
             },
@@ -94,8 +97,14 @@
         });
     }
 
+    const handle_legend_click = function(name){
+        var bar_data = get_bar_data(simulation_data, name);
+        weights_chart = setup_weights(bar_data);
+        weights_chart.setTitle({ text: `${name} Portfolio Weights` });
+    }
+
     var setup_values = function(v_data){
-        Highcharts.stockChart('values_container', {
+        return Highcharts.stockChart('values_container', {
             title: {
                 text: 'Portfolio historical comparison.'
             },
@@ -116,8 +125,7 @@
                     events: {
                         legendItemClick: function(event){
                             event.preventDefault();
-                            var bar_data = get_bar_data(simulation_data, event.target.name);
-                            setup_weights(bar_data);
+                            handle_legend_click(event.target.name);
                         }
                     }
                 }
@@ -125,8 +133,6 @@
             series: v_data
         });
     }
-
-    
 
     $.get('data/simulations.json', function(data){
         simulation_data = data;
@@ -139,8 +145,7 @@
             };
         });
         setup_values(value_data);
-        var bar_data = get_bar_data(simulation_data, 'MC_15');
-        setup_weights(bar_data);
+        handle_legend_click('MC_15');
     });
     
 </script>
